--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ astor = "^0.8.1"
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
 pytest = "^5.3.5"
+pylint = "^2.4.4"
 
 [build-system]
 requires = ["poetry>=0.12"]
